kubernetes/apps/flux/app/webhook/http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook
spec:
  parentRefs:
    - name: default
      sectionName: https-wildcard
      namespace: gateway-api
  hostnames:
    - "flux-webhook.${IDVN_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
